# IHUdeLiver10-2D_3D-deformable-registration

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
ihudeliver10_2d3d/: main.py  utils.py
